--- a/src/package.json
+++ b/src/package.json
@@ -4,7 +4,8 @@
   "description": "Pagina web de libros online",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "WEB",
@@ -14,9 +15,11 @@
   "author": "Keyner Baez",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.12"
   },
   "devDependencies": {
