--- a/src/package.json
+++ b/src/package.json
@@ -15,12 +15,16 @@
   "author": "Keyner Baez",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/storage": "^4.1.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mime-types": "^2.1.25",
     "moment": "^2.24.0",
-    "mongoose": "^5.7.12"
+    "mongoose": "^5.7.12",
+    "multer": "^1.4.2",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
