--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "@google-cloud/storage": "^4.1.3",
+    "@google-cloud/text-to-speech": "^2.0.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
