--- a/src/package.json
+++ b/src/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "google-auth-library": "^5.5.1",
     "jsonwebtoken": "^8.5.1",
     "mime-types": "^2.1.25",
     "moment": "^2.24.0",
