--- a/src/package.json
+++ b/src/package.json
@@ -19,7 +19,9 @@
     "@google-cloud/text-to-speech": "^2.0.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-cache-controller": "^1.1.0",
     "google-auth-library": "^5.5.1",
     "jsonwebtoken": "^8.5.1",
     "mime-types": "^2.1.25",
